--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
     compile 'org.jsoup:jsoup:1.10.2'
+    //添加jsoup的依赖，用来解析网络
+    compile 'com.squareup.okhttp3:okhttp:3.6.0'
+    //第三方网络通信库 okhttp
+
     testCompile 'junit:junit:4.12'
 }
