--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,11 @@
         <activity android:name=".Me" />
         <activity android:name=".Friend" />
         <activity android:name=".UserLogin" />
-        <activity android:name=".UserRegister"></activity>
+        <activity android:name=".UserRegister"></activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
+     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
     </application>
 
 </manifest>
