--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,7 +61,9 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity android:name=".Note"></activity>
+        <activity android:name=".Note" />
+        <activity android:name=".Ecard" />
+        <activity android:name=".EcardInfo"></activity>
     </application>
 
 </manifest>
