--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,7 +63,8 @@
 
         <activity android:name=".Note" />
         <activity android:name=".Ecard" />
-        <activity android:name=".EcardInfo"></activity>
+        <activity android:name=".EcardInfo" />
+        <activity android:name=".SendNote"></activity>
     </application>
 
 </manifest>
