回帖相关功能上传

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.palmneu">
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
@@ -64,23 +65,19 @@
         <activity android:name=".Note" />
         <activity android:name=".Ecard" />
         <activity android:name=".EcardInfo" />
-        <activity android:name=".SendNote"></activity>
-
-
+        <activity android:name=".SendNote" />
 
         <provider
-            android:authorities="com.example.palmneu.fileprovider"
             android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.example.palmneu.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths"/>
+                android:resource="@xml/file_paths" />
         </provider>
 
-
-
-
+        <activity android:name=".ReplyNote"></activity>
     </application>
 
 </manifest>
