图书馆查询功能   不能上下滑动问题以后解决

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,8 @@
 
         <activity android:name=".Note" />
         <activity android:name=".Ecard" />
+        <activity android:name=".Library" />
+        <activity android:name=".LibraryInfo" />
         <activity android:name=".EcardInfo" />
         <activity android:name=".SendNote"></activity>
 
