--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,13 +28,29 @@
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="DNUpDRH71LaaxwTmDv1GXtOZv4DX0D3F" />
 
-        <activity android:name=".MainActivity">
+
+        <!-- Splash screen -->
+        <activity
+            android:name="com.example.palmneu.SplashScreen"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Black.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
+        <activity android:name=".MainActivity">
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        </activity>
+
         <activity android:name=".SaveUserData" />
         <activity
             android:name=".LoginIn"
